<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".penilaian">

    <TextView
            android:id="@+id/tvHasil"
            android:text="@string/hasil"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#00ff00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvNim0"
            android:text="@string/nim0"
            android:layout_below="@id/tvHasil"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvNim"
            android:text="@string/getnim"
            android:layout_below="@id/tvHasil"
            android:layout_toEndOf="@+id/tvNim0"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvNama0"
            android:text="@string/nama0"
            android:layout_below="@id/tvNim0"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvNama"
            android:text="@string/getnama"
            android:layout_toEndOf="@+id/tvNama0"
            android:layout_margin="10dp"
            android:layout_below="@id/tvNim"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvNilai0"
            android:text="@string/nilai0"
            android:layout_below="@id/tvNama0"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvNilai"
            android:text="@string/getnilai"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/tvNilai0"
            android:layout_below="@id/tvNama"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvKeterangan0"
            android:text="@string/keterangan0"
            android:layout_below="@id/tvNilai0"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvKeterangan"
            android:text="@string/getketerangan"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/tvKeterangan0"
            android:textSize="20sp"
            android:layout_below="@id/tvNilai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</RelativeLayout>