<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/tv1"
            android:text="@string/pemberian_nilai_pada_mahasiswa"
            android:layout_centerHorizontal="true"
            android:layout_margin="40dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nim1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv1"
            android:paddingBottom="20sp"
            android:hint="@string/nim1">

        <EditText
                android:id="@+id/txtNim"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/tv1"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nama1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nim1"
            android:paddingBottom="20sp"
            android:hint="@string/nama1">

    <EditText
            android:id="@+id/txtNama"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nilai1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nama1"
            android:paddingBottom="20sp"
            android:hint="@string/nilai1">

    <EditText
            android:id="@+id/txtNilai"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btnCek"
            android:text="@string/proses"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp"
            android:layout_below="@id/nilai1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


</RelativeLayout>